# multivariate-optimization

./: Cargo.toml  LICENSE
benches/: distributions.rs  optimize.rs
src/: conquer.rs  distributions.rs  lib.rs  optimize.rs  splitter.rs  testfuncs.rs  triangular.rs
