[package]
name = "multivariate-optimization"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "optimize"
harness = false
